// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSON > expands input embedded in Markdown 1`] = `
"\`\`\`json
{
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [], // Comment 4️⃣
  "quux": {}
}
\`\`\`
"
`;

exports[`JSON > expands non-empty arrays and objects 1`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [], // Comment 4️⃣
  "quux": {}
}
"
`;

exports[`JSON > formats in standalone mode 1`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [], // Comment 4️⃣
  "quux": {}
}
"
`;

exports[`JSON > respects \`tabWidth\` 1`] = `
"{
    // Comment 1️⃣
    "foo": [
        1,
        2
    ],
    "bar": /* Comment 2️⃣ */ [
        3
    ],
    // Comment 3️⃣
    "baz": {
        "values": [
            4
        ]
    },
    "qux": [], // Comment 4️⃣
    "quux": {}
}
"
`;

exports[`JSON > respects \`useTabs\` 1`] = `
"{
	// Comment 1️⃣
	"foo": [
		1,
		2
	],
	"bar": /* Comment 2️⃣ */ [
		3
	],
	// Comment 3️⃣
	"baz": {
		"values": [
			4
		]
	},
	"qux": [], // Comment 4️⃣
	"quux": {}
}
"
`;

exports[`JSON > works with other plugins 1`] = `
"{
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "quux": {},
  "qux": [] // Comment 4️⃣
}
"
`;

exports[`JSON.stringify > expands input embedded in Markdown 1`] = `
"\`\`\`json
{
  "foo": [
    1,
    2
  ],
  "bar": [
    3
  ],
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [],
  "quux": {}
}
\`\`\`
"
`;

exports[`JSON.stringify > expands non-empty arrays and objects 1`] = `
"{
  "foo": [
    1,
    2
  ],
  "bar": [
    3
  ],
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [],
  "quux": {}
}
"
`;

exports[`JSON.stringify > formats in standalone mode 1`] = `
"{
  "foo": [
    1,
    2
  ],
  "bar": [
    3
  ],
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [],
  "quux": {}
}
"
`;

exports[`JSON.stringify > respects \`tabWidth\` 1`] = `
"{
    "foo": [
        1,
        2
    ],
    "bar": [
        3
    ],
    "baz": {
        "values": [
            4
        ]
    },
    "qux": [],
    "quux": {}
}
"
`;

exports[`JSON.stringify > respects \`useTabs\` 1`] = `
"{
	"foo": [
		1,
		2
	],
	"bar": [
		3
	],
	"baz": {
		"values": [
			4
		]
	},
	"qux": [],
	"quux": {}
}
"
`;

exports[`JSON.stringify > works with other plugins 1`] = `
"{
  "foo": {},
  "bar": [
    "baz"
  ]
}
"
`;

exports[`JSONC > expands input embedded in Markdown 1`] = `
"\`\`\`jsonc
{
  // Comment 1️⃣
  "foo": [
    1,
    2,
  ],
  "bar": /* Comment 2️⃣ */ [
    3,
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4,
    ],
  },
  "qux": [], // Comment 4️⃣
  "quux": {},
}
\`\`\`
"
`;

exports[`JSONC > expands non-empty arrays and objects 1`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2,
  ],
  "bar": /* Comment 2️⃣ */ [
    3,
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4,
    ],
  },
  "qux": [], // Comment 4️⃣
  "quux": {},
}
"
`;

exports[`JSONC > formats in standalone mode 1`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [], // Comment 4️⃣
  "quux": {}
}
"
`;

exports[`JSONC > respects \`tabWidth\` 1`] = `
"{
    // Comment 1️⃣
    "foo": [
        1,
        2,
    ],
    "bar": /* Comment 2️⃣ */ [
        3,
    ],
    // Comment 3️⃣
    "baz": {
        "values": [
            4,
        ],
    },
    "qux": [], // Comment 4️⃣
    "quux": {},
}
"
`;

exports[`JSONC > respects \`trailingComma\` 1`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2,
  ],
  "bar": /* Comment 2️⃣ */ [
    3,
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4,
    ],
  },
  "qux": [], // Comment 4️⃣
  "quux": {},
}
"
`;

exports[`JSONC > respects \`trailingComma\` 2`] = `
"{
  // Comment 1️⃣
  "foo": [
    1,
    2
  ],
  "bar": /* Comment 2️⃣ */ [
    3
  ],
  // Comment 3️⃣
  "baz": {
    "values": [
      4
    ]
  },
  "qux": [], // Comment 4️⃣
  "quux": {}
}
"
`;

exports[`JSONC > respects \`useTabs\` 1`] = `
"{
	// Comment 1️⃣
	"foo": [
		1,
		2,
	],
	"bar": /* Comment 2️⃣ */ [
		3,
	],
	// Comment 3️⃣
	"baz": {
		"values": [
			4,
		],
	},
	"qux": [], // Comment 4️⃣
	"quux": {},
}
"
`;

exports[`JSONC > works with other plugins 1`] = `
"{
  "foo": {},
  "bar": [
    "baz",
  ],
}
"
`;
